# snail-sokoban

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build_maps.bat  my.rc  my.res  start.bat  test.c
lib/: base.h  command.h  map.h  operation.h  player.h  score.h
src/: base.c  command.c  game.c  game.h  input.c  input.h  main.c  map.c  map.h  operation.c  score.c  score.h  types.h
src/maps/: fase0.c  fase1.c  fase2.c  fase3.c  fase4.c  fase5.c  fase6.c  fase7.c  fase8.c  fase9.c  title.c
testes/: sokoban.c
